Cosmetic change in first Markdown cell

--- a/Module_2/bank.ipynb
+++ b/Module_2/bank.ipynb
@@ -5,7 +5,7 @@
    "id": "6bcbb57c-3074-4dfb-b387-ec50111609f6",
    "metadata": {},
    "source": [
-    "# Hands On Using _if_, Day 2"
+    "# Hands On Using _if_"
    ]
   },
   {
